--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,12 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:megaatmega1280]
+[env:megaatmega2560]
 platform = atmelavr
-board = megaatmega1280
+board = megaatmega2560
 framework = arduino
+lib_deps = 
+	adafruit/Adafruit NeoPixel@^1.12.5
+	https://github.com/thijse/Arduino-Log.git
+	paulstoffregen/TimerThree@^1.1
+	paulstoffregen/TimerOne@^1.2
