Updated PID and logging. Updated Deps for using FastLED

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	https://github.com/thijse/Arduino-Log.git
 	paulstoffregen/TimerThree@^1.1
 	paulstoffregen/TimerOne@^1.2
+	fastled/FastLED@^3.9.14
